<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_caps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="showText"
        android:text="@string/button_main_text" />

    <EditText
        android:id="@+id/editText_caps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/button_caps"
        android:layout_toStartOf="@id/button_caps"
        android:hint="@string/edit_text_hint"
        android:inputType="textCapSentences" />

    <Button
        android:id="@+id/button_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_caps"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="showText"
        android:text="@string/button_main_text" />

    <EditText
        android:id="@+id/editText_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/editText_caps"
        android:layout_toLeftOf="@id/button_pass"
        android:layout_toStartOf="@id/button_pass"
        android:hint="@string/edit_pass_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_pass"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="showText"
        android:text="@string/button_main_text" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/editText_pass"
        android:layout_toLeftOf="@id/button_email"
        android:layout_toStartOf="@id/button_email"
        android:hint="@string/edit_email_hint"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:id="@+id/linear_phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_phone_hint"
            android:layout_weight="1"
            android:inputType="phone" />

        <Spinner
            android:id="@+id/label_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/editText_email"
        android:layout_below="@id/linear_phone_layout"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_phone_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/phone_label_size"
            android:layout_marginTop="@dimen/phone_label_topMargin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/phone_label"/>

        <TextView
            android:id="@+id/text_phone_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/phone_text_size"
            android:textAlignment="center"
            android:text="@string/phone_content"/>

    </LinearLayout>

</RelativeLayout>